k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: websearch-api
  labels:
    name: websearch-api
    environment: production
